--- a/OpenGL2DTemplate.vcxproj.filters
+++ b/OpenGL2DTemplate.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="Shield.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AnimateInPlace.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BoundingBox.h">
@@ -117,6 +120,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Shield.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AnimateInPlace.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
