Add better shapes and styling and animation for the space/alien theme

--- a/OpenGL2DTemplate.vcxproj
+++ b/OpenGL2DTemplate.vcxproj
@@ -95,6 +95,7 @@
     <ClCompile Include="GameState.cpp" />
     <ClCompile Include="Shield.cpp" />
     <ClCompile Include="Shrink.cpp" />
+    <ClCompile Include="Star.cpp" />
     <ClCompile Include="Time.cpp" />
     <ClCompile Include="GameUpperSection.cpp" />
     <ClCompile Include="main.cpp" />
@@ -115,6 +116,7 @@
     <ClInclude Include="GameState.h" />
     <ClInclude Include="Shield.h" />
     <ClInclude Include="Shrink.h" />
+    <ClInclude Include="Star.h" />
     <ClInclude Include="Time.h" />
     <ClInclude Include="GameUpperSection.h" />
     <ClInclude Include="Obstacle.h" />
